# play-cmake-dll

./: CMakeLists.txt  README.md  animal.cpp  animal.h
demo/: CMakeLists.txt  main.cpp
